# partyboard

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  building.md  configure.py  dol.def  files.cmake  rel_symbols.txt
.github/workflows/: build.yml
ci/: build-appimage.sh
config/GMPE01_00/: splits.txt  symbols.txt
config/GMPE01_01/: splits.txt  symbols.txt
config/GMPJ01_00/: splits.txt  symbols.txt
config/GMPP01_00/: config.yml  splits.txt  symbols.txt
config/GMPP01_01/: build.sha1  config.yml
config/GMPP01_02/: config.yml
include/: datadir_enum.h  datadir_table.h  ext_math.h  version.h
include/REL/: E3SetupDLL.h  instDll.h  m401Dll.h  m403Dll.h  m406Dll.h  m407dll.h  m408Dll.h  m409Dll.h  m410Dll.h  m412Dll.h  m415Dll.h  m416Dll.h  m417Dll.h  m418Dll.h  m420dll.h  m421Dll.h  m424Dll.h  m425Dll.h  m427Dll.h  m428Dll.h  m430Dll.h  m431Dll.h  m432data.h  m433Dll.h  m434Dll.h  m435Dll.h  m436Dll.h  m437Dll.h  m438Dll.h  m439data.h  m440Dll.h  m442Dll.h  m443Dll.h  m444dll.h  m446Dll.h  m447dll.h  m453Dll.h  m455Dll.h  m456Dll.h  m460Dll.h  (+20 more)
include/data_num/: effect.h
include/dolphin/demo/: DEMOStats.h
include/game/: ClusterExec.h  EnvelopeExec.h  animdata.h  chrman.h  gamework_data.h  hsfanim.h  hsfdraw.h  hsfformat.h  hsfload.h  hsfman.h  hsfmotion.h  humath.h  mapspace.h  memory.h  minigame_seq.h  object.h  process.h  sprite.h
include/game/board/: basic_space.h  bowser.h  fortune.h  main.h  model.h  player.h  space.h
include/port/: achievements.h  byteswap.h  config.hpp  config_var.hpp  dolassets.h  imgui.h  io.hpp  main.h  settings.h  ui.h
res/rml/: overlay.rcss  popup.rcss  prelaunch.rcss  tabbing.rcss  tuner.rcss  window.rcss
src/REL/E3setupDLL/: main.c  mgselect.c
src/REL/_minigameDLL/: _minigameDLL.c
src/REL/bootDll/: language.c  main.c
src/REL/instDll/: font.c  main.c
src/REL/m401Dll/: main.c  main_ex.c
src/REL/m402Dll/: main.c
src/REL/m403Dll/: main.c  scene.c
src/REL/m404Dll/: main.c
src/REL/m405Dll/: main.c
src/REL/m406Dll/: main.c  map.c  player.c
src/REL/m407dll/: camera.c  player.c  whomp.c
src/REL/m408Dll/: camera.c  main.c  object.c  stage.c
src/REL/m409Dll/: cursor.c  main.c  player.c
src/REL/m410Dll/: game.c  main.c  player.c
src/REL/m411Dll/: main.c
src/REL/m412Dll/: main.c
src/REL/m413Dll/: main.c
src/REL/m414Dll/: main.c
src/REL/m415Dll/: main.c  map.c
src/REL/m416Dll/: main.c  map.c
src/REL/m417Dll/: main.c  player.c  sequence.c  water.c
src/REL/m418Dll/: main.c
src/REL/m419Dll/: main.c
src/REL/m420dll/: player.c
src/REL/m421Dll/: main.c  player.c
src/REL/m422Dll/: main.c
src/REL/m423Dll/: main.c
src/REL/m424Dll/: ball.c  claw.c  main.c  map.c
src/REL/m425Dll/: main.c  thwomp.c
src/REL/m426Dll/: main.c
src/REL/m427Dll/: main.c  map.c  player.c
src/REL/m428Dll/: main.c  map.c  player.c
src/REL/m429Dll/: main.c
src/REL/m430Dll/: main.c  player.c  water.c
src/REL/m431Dll/: main.c  object.c
src/REL/m432Dll/: main.c
src/REL/m433Dll/: main.c  map.c  player.c
src/REL/m434Dll/: fish.c  main.c  map.c  player.c
src/REL/m435Dll/: main.c
src/REL/m436Dll/: main.c
src/REL/m437Dll/: main.c
src/REL/m438Dll/: fire.c  main.c  map.c
src/REL/m439Dll/: main.c
src/REL/m440Dll/: main.c  object.c
src/REL/m441Dll/: main.c
src/REL/m442Dll/: main.c
src/REL/m443Dll/: main.c  map.c  player.c
src/REL/m444dll/: main.c  pinball.c
src/REL/m445Dll/: main.c
src/REL/m446Dll/: card.c  deck.c  main.c  player.c  table.c
src/REL/m447dll/: block.c  main.c  player.c  stage.c
src/REL/m448Dll/: main.c
src/REL/m449Dll/: main.c
src/REL/m450Dll/: main.c
src/REL/m451Dll/: m451.c
src/REL/m453Dll/: main.c  map.c
src/REL/m455Dll/: main.c  stage.c
src/REL/m456Dll/: main.c  stage.c
src/REL/m457Dll/: main.c
src/REL/m458Dll/: main.c
src/REL/m459dll/: main.c
src/REL/m460Dll/: main.c  map.c  player.c
src/REL/m461Dll/: main.c
src/REL/m462Dll/: main.c
src/REL/m463Dll/: main.c
src/REL/mentDll/: main.c
src/REL/messDll/: main.c
src/REL/mgmodedll/: battle.c  free_play.c  main.c  mgmode.c  minigame.c  tictactoe.c
src/REL/modeltestDll/: main.c  modeltest00.c  modeltest01.c
src/REL/modeseldll/: filesel.c  main.c
src/REL/mpexDll/: mgname.c  mpex.c
src/REL/mstory2Dll/: board_clear.c  board_entrance.c  board_miss.c  ending.c  main.c  mg_clear.c  mg_miss.c  save.c
src/REL/mstory3Dll/: main.c  result.c  result_seq.c  win_effect.c
src/REL/mstory4Dll/: main.c
src/REL/mstoryDll/: board_clear.c  board_miss.c  main.c  mg_clear.c  mg_miss.c  save.c
src/REL/nisDll/: main.c
src/REL/option/: guide.c  sound.c
src/REL/present/: common.c  init.c  present.c
src/REL/resultDll/: battle.c  main.c
src/REL/safDll/: main.c
src/REL/selmenuDll/: main.c
src/REL/staffDll/: main.c
src/REL/subchrselDll/: main.c
src/REL/w01Dll/: main.c  mg_coin.c  mg_item.c
src/REL/w02Dll/: gamble.c  gendice.c  main.c  mg_coin.c  mg_item.c  roulette.c  shuffleboard.c
src/REL/w03Dll/: condor.c  main.c  mg_coin.c  mg_item.c  river.c  statue.c
src/REL/w04Dll/: big_boo.c  boo_event.c  main.c  mg_coin.c  mg_item.c
src/REL/w05Dll/: dolphin.c  hotel.c  mg_coin.c  mg_item.c  monkey.c
src/REL/w06Dll/: bowser.c  mg_coin.c  mg_item.c
src/REL/w10Dll/: host.c  scene.c  tutorial.c
src/REL/w20Dll/: main.c
src/REL/ztardll/: main.c  select.c
src/TRK_MINNOW_DOLPHIN/: __exception.s
src/game/: ClusterExec.c  EnvelopeExec.c  ShapeExec.c  THPSimple.c  card.c  chrman.c  data.c  fault.c  flag.c  font.c  gamework.c  hsfanim.c  hsfdraw.c  hsfex.c  hsfload.c  hsfman.c  hsfmotion.c  init.c  kerent.c  main.c  mapspace.c  minigame_seq.c  objdll.c  objmain.c  objsetupd.c  objsub.c  objsysobj.c  pad.c  printfunc.c  process.c  saveload.c  sprman.c  sprput.c  sreset.c  thpmain.c  window.c
src/game/board/: basic_space.c  ui.c  (+24 more)
src/port/: OS.c  achievements.cpp  audio.c  byteswap.cpp  config.cpp  dolassets.cpp  dvd.c  entry.cpp  file_select.cpp  file_select.hpp  imgui.cpp  io.cpp  iso_validate.cpp  iso_validate.hpp  portmain.cpp  settings.cpp  stubs.c
tools/: download_tool.py  project.py
(+144 files in other folders)
